Update ADSP 01 - Improve formatting and LaTeX for statistics summary

--- a/cert_adsp/01_statistics_basics.ipynb
+++ b/cert_adsp/01_statistics_basics.ipynb
@@ -5,7 +5,7 @@
    "id": "1f5ff275-aa8e-4d4c-8611-6b9f5b4a97ef",
    "metadata": {},
    "source": [
-    "# 📊 ADSP 통계 기초 정리"
+    "# 📊 ADSP 정리 01 - 통계 기초 (Descriptive Statistics)"
    ]
   },
   {
@@ -15,12 +15,14 @@
    "source": [
     "## 1. 중심 경향성 (Measures of Central Tendency)\n",
     "\n",
-    "- 평균 (Mean):  \n",
-    "  $ \\bar{x} = \\frac{1}{n} \\sum x_i $\n",
+    "- **평균 (Mean)**  \n",
+    "  $ \\bar{x} = \\frac{1}{n} \\sum_{i=1}^n x_i $\n",
     "\n",
-    "- 중앙값 (Median): 데이터를 오름차순으로 정렬했을 때 가운데 값\n",
+    "- **중앙값 (Median)**  \n",
+    "  데이터를 크기순으로 정렬했을 때 중간에 위치한 값\n",
     "\n",
-    "- 최빈값 (Mode): 가장 자주 나오는 값"
+    "- **최빈값 (Mode)**  \n",
+    "  가장 자주 나타나는 값"
    ]
   },
   {
@@ -30,18 +32,20 @@
    "source": [
     "## 2. 산포도 (Measures of Dispersion)\n",
     "\n",
-    "- 분산 (Variance):  \n",
+    "- **분산 (Variance)**  \n",
     "  $ \\sigma^2 = \\frac{1}{n} \\sum (x_i - \\mu)^2 $\n",
     "\n",
-    "- 표본분산 (Sample Variance):  \n",
-    "  $ s^2 = \\frac{1}{n - 1} \\sum (x_i - \\bar{x})^2 $\n",
+    "- **표본분산 (Sample Variance)**  \n",
+    "  $ s^2 = \\frac{1}{n-1} \\sum (x_i - \\bar{x})^2 $\n",
     "\n",
-    "- 표준편차 (Standard Deviation):  \n",
+    "- **표준편차 (Standard Deviation)**  \n",
     "  $ \\sigma = \\sqrt{\\sigma^2} $\n",
     "\n",
-    "- 범위 (Range): 최댓값 - 최솟값\n",
+    "- **범위 (Range)**  \n",
+    "  $ \\text{Range} = \\text{최댓값} - \\text{최솟값} $\n",
     "\n",
-    "- 사분위수범위 (IQR): $ Q_3 - Q_1 $"
+    "- **사분위수 범위 (IQR)**  \n",
+    "  $ \\text{IQR} = Q_3 - Q_1 $"
    ]
   },
   {
@@ -51,35 +55,21 @@
    "source": [
     "## 3. 분포의 모양 (Shape of Distribution)\n",
     "\n",
-    "- 왜도 (Skewness): 분포의 비대칭 정도  \n",
-    "  (오른쪽으로 긴 꼬리 → 양의 왜도)\n",
+    "- **왜도 (Skewness)**  \n",
+    "  - 분포의 비대칭 정도  \n",
+    "  - 오른쪽 꼬리 → 양의 왜도  \n",
+    "  - 왼쪽 꼬리 → 음의 왜도\n",
     "\n",
-    "- 첨도 (Kurtosis): 꼬리의 두꺼움 정도  \n",
-    "  (평균 주변에 몰려 있으면 높은 첨도)"
+    "- **첨도 (Kurtosis)**  \n",
+    "  - 분포의 뾰족한 정도  \n",
+    "  - 정규분포보다 뾰족 → **양의 첨도**  \n",
+    "  - 정규분포보다 평평 → **음의 첨도**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "62691701-9553-45dd-bdb2-6ffdb979d210",
+   "id": "4cdf33a7-5523-49dd-88ff-a06f70036dba",
    "metadata": {},
-   "source": [
-    "## 4. 확률분포 (Probability Distribution)\n",
-    "\n",
-    "- 이산 확률분포:\n",
-    "  - 이항분포 (Binomial Distribution)\n",
-    "  - 포아송분포 (Poisson Distribution)\n",
-    "\n",
-    "- 연속 확률분포:\n",
-    "  - 정규분포 (Normal Distribution)\n",
-    "  - t-분포, 카이제곱분포 등"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31fd753d-2185-4772-a735-acf33625a114",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
