--- a/cert_adsp/04_data_visualization.ipynb
+++ b/cert_adsp/04_data_visualization.ipynb
@@ -41,8 +41,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26409c53-3fc4-41d7-afb5-cc1e439d20dc",
+   "metadata": {},
+   "source": [
+    "## 3. 히스토그램 (Histogram)\n",
+    "\n",
+    "- **연속형 변수의 분포**를 시각화할 때 사용\n",
+    "- 데이터를 구간별로 나누고 빈도를 막대의 높이로 표시\n",
+    "- 분포의 형태(정규분포인지, 치우침 등)를 파악하기 좋음"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f680d399-6b64-4700-8b3a-099422ddcb00",
    "metadata": {},
    "outputs": [
@@ -68,6 +80,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "065210bd-eeaa-42fb-baf0-477582c27209",
+   "metadata": {},
+   "source": [
+    "## 4. 박스플롯 (Boxplot)\n",
+    "\n",
+    "- **데이터의 분포, 중앙값, 이상치**를 한눈에 확인 가능\n",
+    "- 박스: 제1사분위수(Q1) ~ 제3사분위수(Q3)\n",
+    "- 선: 중앙값\n",
+    "- 점: 이상치(outlier)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "731aca6a-874d-4756-9f51-70a8124b813a",
@@ -90,6 +115,18 @@
     "plt.title(\"Boxplot of Feature 1 & Feature 2\")\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e48bfb0-aa5a-4f05-ac43-bf3abff7c84b",
+   "metadata": {},
+   "source": [
+    "## 5. 산점도 (Scatter Plot)\n",
+    "\n",
+    "- **두 변수 간의 관계**를 시각화\n",
+    "- 변수 간의 상관관계(양의 상관, 음의 상관, 무관계 등)를 파악 가능\n",
+    "- 데이터의 패턴이나 군집의 존재도 파악 가능"
    ]
   },
   {
